# studyhub

./: .gitignore  CLAUDE.md  demand.md  open-source-references.md  pnpm-lock.yaml  pyproject.toml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_llm_usage_table.py  003_create_papers_table.py  004_add_quality_score_to_papers.py  005_create_scholars_table.py  006_create_deep_research_tasks_table.py  007_create_experiment_plans_table.py  008_create_reading_lists_table.py  009_create_experiment_runs_table.py  010_add_queue_position_to_experiment_runs.py  011_create_researcher_profiles_table.py  012_create_research_needs_table.py  013_create_messages_table.py  014_create_experiment_metrics_table.py  015_create_scholar_follows_table.py  016_create_agent_runs_and_logs_tables.py  017_create_invite_codes_table.py
backend/app/: config.py  database.py  dependencies.py  main.py  worker.py
backend/app/middleware/: cors.py  rate_limit.py
backend/app/models/: __init__.py  agent_run.py  deep_research.py  experiment_metric.py  experiment_plan.py  experiment_run.py  invite_code.py  llm_usage.py  message.py  paper.py  reading_list.py  research_need.py  researcher_profile.py  scholar.py  scholar_follow.py  user.py
backend/app/routers/: agent.py  auth.py  autoresearch.py  citations.py  deep_research.py  experiments.py  health.py  llm.py  matching.py  messages.py  needs.py  papers.py  plans.py  profiles.py  reading_lists.py  scholars.py  search.py  workspace.py
backend/templates/: code_skeleton.py.j2  experiment_report.md.j2  literature_review.md.j2
backend/tests/: conftest.py  test_activities.py  test_aggregator_chinese.py  test_analyzer.py  test_auth.py  test_chart_generator.py  test_citation_network.py  test_citation_similarity.py  test_cli.py  test_cnki_client.py  test_code_skeleton.py  test_dataset_recommender.py  test_docker_runner.py  test_embedding_service.py  test_environment.py  test_experiments_router.py  test_feasibility_scorer.py  test_gap_detector.py  test_git_manager.py  test_gpu_monitor.py  test_improvement_analyzer.py  test_llm.py  test_loop_agent.py  test_match_explainer.py  test_matching_engine.py  test_message_service.py  test_metrics.py  test_need_matcher.py  test_notification_service.py  test_paper_search.py  test_pdf_parser.py  test_plan_generator.py  test_profile_enricher.py  test_prompts.py  test_prompts_deep_research.py  test_quality_scoring.py  test_reading_list_model.py  test_report_generator.py  test_search_index.py  test_sota_identifier.py  (+2 more)
docs/: STARTUP.md  (+16 more)
(+456 files in other folders)
